<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">阅读</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>

    <string name="tab_home">主页</string>
    <string name="tab_collect">收藏</string>
    <string name="tab_pending_read">待阅</string>

    <string name="nav_title_home">推荐</string>
    <string name="nav_title_psychology_daily">日常心理学</string>
    <string name="nav_title_user_recommended_daily">大象公会</string>
    <string name="nav_title_movie_daily">电影</string>
    <string name="nav_title_not_allowed_bored_daily">杂文</string>
    <string name="nav_title_design_daily">设计</string>
    <string name="nav_title_big_company_daily">短篇小说</string>
    <string name="nav_title_economic_daily">旅游</string>
    <string name="nav_title_internet_safety_daily">互联网</string>
    <string name="nav_title_start_games_daily">游戏</string>
    <string name="nav_title_music_daily">音乐</string>
    <string name="nav_title_cartoon_daily">动画漫画</string>
    <string name="nav_title_sports_daily">体育竞技</string>
    <string name="today">今日热闻</string>
    <string name="comment_example">有多少爱可以重来，有多少人，值得等待。寂寞沙洲我该思念谁</string>
    <string name="comment_replay">//我说：写几句你喜欢的歌词吧</string>

</resources>